--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>official</title>
+    <link rel="icon" href="static/logo/logo.png" type="logo/logo.jpg">
+    <link rel="shortcut icon" href="static/logo/logo.png" type="logo/logo.jpg">	
+    <title>比特云算
+    </title>
   </head>
   <body>
     <div id="app"></div>
