--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="keywords" content="比特云算，云算力，挖矿，矿机租赁，矿机托管，神马矿机，蚂蚁矿机，比特币矿机，挖比特币"/>
     <link rel="icon" href="static/logo/logo.png" type="logo/logo.jpg">
     <link rel="shortcut icon" href="static/logo/logo.png" type="logo/logo.jpg">	
     <title>比特云算
